Fixed token with multiple groups access to User / Groups API (#428)